--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.14.0",
+    "sequelize": "^3.5.1",
+    "sqlite": "^2.2.0",
     "underscore": "^1.8.3"
   }
 }
